--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,321 @@
-.container {
-  padding: 0 2rem;
-}
-
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+.container nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  margin-top: 40px;
+  width: 1320px;
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
+.container nav .w_btn {
+  background-color: #fff;
+  padding: 12px 24px;
+  font-size: 16px;
+  color: #4c35e6;
   border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  font-weight: 700;
 }
 
-.grid {
+.container nav .w_btn:hover {
+  background-color: #101127;
+  color: #fff;
+}
+
+.con {
+  max-width: 1200px;
+  margin: 0 auto;
+  color: #fff;
+}
+
+.con h1 {
+  font-size: 64px;
+  max-width: 420px;
+  line-height: 1.1;
+  margin: 0 0 16px 0;
+  text-transform: capitalize;
+}
+
+.con p {
+  font-size: 20px;
+  max-width: 410px;
+  line-height: 1.6;
+  padding: 0 0 36px 0;
+}
+
+.con .innerCon {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.bg {
+  background-color: #101127;
+  padding: 40px 20px;
+}
+
+.bg_img {
+  background-image: url("/bg.png");
+  background-size: cover;
+  padding: 120px 0;
+}
+
+.p_bg {
+  background-color: #4c35e6;
+}
+
+.secCon {
+  max-width: 1200px;
+  padding: 120px 0;
+  margin: 0 auto;
+}
+
+.secCon h2 {
+  font-size: 48px;
+  text-transform: capitalize;
+}
+
+.secCon p {
   max-width: 800px;
+  font-size: 20px;
+  line-height: 1.6;
 }
 
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
+.secCon .max_p {
+  max-width: 450px;
+  margin: 0 0 56px 0;
+}
+
+.secCon .flex_con {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.secCon .card_con {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.secCon .card {
+  padding: 60px 40px;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  background-color: #fff;
+  max-width: 380px;
+  -webkit-box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.12);
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.secCon .card h3 {
+  margin: 0 0 8px 0;
+  font-size: 28px;
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.secCon .card p {
+  font-size: 14px;
 }
 
-.card p {
+.secCon .card .title {
+  color: #4c35e6;
+  font-weight: 700;
+}
+
+.secCon .number_con {
+  background-color: #4c35e6;
+  padding: 16px;
+  display: block;
+  max-width: 100px;
+  margin: 0 auto 32px auto;
+  border-radius: 5px;
+}
+
+.secCon .number_con p {
+  font-size: 64px;
+  color: #fff;
   margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+  line-height: 1;
+  font-weight: 900;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.cardSec {
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.cardSec h2 {
+  font-size: 48px;
+  text-transform: capitalize;
 }
+
+.cardSec p {
+  max-width: 800px;
+  font-size: 20px;
+  line-height: 1.6;
+}
+
+.cardSec .card_con {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 30px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-top: -260px;
+}
+
+.cardSec .card {
+  padding: 60px 40px;
+  border-radius: 10px;
+  background-color: #fff;
+  max-width: 380px;
+  text-align: center;
+  -webkit-box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.12);
+}
+
+.cardSec .number_con {
+  background-color: #4c35e6;
+  padding: 16px;
+  display: block;
+  max-width: 100px;
+  margin: 0 auto 32px auto;
+  border-radius: 5px;
+}
+
+.cardSec .number_con p {
+  font-size: 64px;
+  color: #fff;
+  margin: 0;
+  line-height: 1;
+  font-weight: 900;
+}
+
+.cen {
+  text-align: center;
+  color: #fff;
+}
+
+.get_s {
+  padding-top: 100px;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #fff;
+}
+
+.get_s h3 {
+  font-size: 28px;
+  margin-bottom: 12px;
+}
+
+.get_s p {
+  max-width: 338px;
+  font-size: 20px;
+  line-height: 1.6;
+  margin: 0 0 56px 0;
+}
+
+.bg footer {
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+}
+
+.btn {
+  background-color: #4c35e6;
+  padding: 16px 28px;
+  font-size: 16px;
+  color: #fff;
+  border-radius: 5px;
+  font-weight: 700;
+}
+
+.btn:hover {
+  background-color: #3720d2;
+}
+
+.w_btn {
+  background-color: #fff;
+  padding: 16px 28px;
+  font-size: 16px;
+  color: #4c35e6;
+  border-radius: 5px;
+  font-weight: 700;
+}
+
+.w_btn:hover {
+  background-color: #101127;
+  color: #fff;
+}
+
+.w_o_btn {
+  background-color: transparent;
+  border: 1px solid white;
+  padding: 12px 24px;
+  font-size: 16px;
+  color: #fff;
+  border-radius: 5px;
+  font-weight: 700;
+  margin: 0 12px 0 0;
+}
+
+.w_o_btn:hover {
+  background-color: #101127;
+  color: #fff;
+  border: 1px solid #101127;
+}
+
+.icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 12px;
+}
+
+.icon_con {
+  background-color: #4c35e6;
+  border-radius: 50%;
+  height: 36px;
+  width: 36px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.icon_con:hover {
+  background-color: #3720d2;
+}
+/*# sourceMappingURL=Home.module.css.map */
