--- a/styles/dashboard/Dashboard.Module.css
+++ b/styles/dashboard/Dashboard.Module.css
@@ -22,4 +22,4 @@
       grid-template-columns: 1fr 1fr;
   margin-right: 20px;
 }
-/*# sourceMappingURL=Dashboard.Module.css.map */
+/*# sourceMappingURL=Dashboard.module.css.map */
