--- a/styles/suggestions/Suggestions.module.css
+++ b/styles/suggestions/Suggestions.module.css
@@ -188,4 +188,22 @@
 .sCCon p {
   margin-left: 20px;
 }
+
+.tag {
+  background-color: #dbdbdb;
+  padding: 4px 24px;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 5px;
+}
+
+.positive {
+  background-color: #25AA04;
+  color: #fff;
+}
+
+.negative {
+  background-color: #D11A2A;
+  color: #fff;
+}
 /*# sourceMappingURL=Suggestions.module.css.map */
