--- a/styles/suggestions/Suggestions.module.scss
+++ b/styles/suggestions/Suggestions.module.scss
@@ -155,3 +155,20 @@
     margin-left: 20px;
   }
 }
+
+.tag{
+  background-color: #dbdbdb;
+  padding: 4px 24px;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 5px;
+}
+.positive{
+  background-color: #25AA04;
+  color: #fff;
+}
+
+.negative{
+  background-color: #D11A2A;
+  color: #fff;
+}
