--- a/styles/global_components/TopNav.module.css
+++ b/styles/global_components/TopNav.module.css
@@ -30,4 +30,29 @@
   font-weight: 600;
   margin-left: 16px;
 }
+
+.btn {
+  padding: 8px 24px;
+  border: none;
+  background-color: #dfdfdf;
+  border: 1px solid #919191;
+  border-radius: 5px;
+  font-size: 16px;
+  margin-left: 12px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-color: #4c35e6;
+  color: #fff;
+}
+
+.spanCon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
 /*# sourceMappingURL=TopNav.module.css.map */
