--- a/styles/global_components/TopNav.module.scss
+++ b/styles/global_components/TopNav.module.scss
@@ -22,3 +22,24 @@
   font-weight: 600;
   margin-left: 16px;
 }
+
+.btn {
+  padding: 8px 24px;
+  border: none;
+  background-color: #dfdfdf;
+  border: 1px solid rgb(145, 145, 145);
+  border-radius: 5px;
+  font-size: 16px;
+  margin-left: 12px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #4c35e6;
+    color: #fff;
+  }
+}
+
+.spanCon {
+  display: flex;
+  align-items: center;
+}
