--- a/styles/dashboard/components/Recommendation.module.scss
+++ b/styles/dashboard/components/Recommendation.module.scss
@@ -24,3 +24,21 @@
   align-items: center;
   padding: 40px;
 }
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  a {
+    margin-right: 20px;
+    background-color: #4c35e6;
+    padding: 8px 16px;
+    border-radius: 5px;
+    color: #fff;
+
+    &:hover {
+      background-color: #200bae;
+    }
+  }
+}
