--- a/styles/settings/Settings.module.css
+++ b/styles/settings/Settings.module.css
@@ -8,4 +8,250 @@
 .innerCon {
   margin-left: 220px;
 }
+
+.cFlex {
+  width: calc(100vw - 240px);
+}
+
+.sCon {
+  background-color: white;
+  padding: 16px;
+  overflow-x: hidden;
+  width: calc(100vw - 240px);
+  border-radius: 5px;
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.08);
+          box-shadow: 0 1px 4px rgba(0, 0, 0, 0.08);
+  margin: 0 0 20px 0;
+}
+
+.sCon h2 {
+  font-size: 16px;
+  font-weight: 600;
+  margin: 0;
+  padding-bottom: 9px;
+}
+
+.section_tab {
+  background-color: #fff;
+  border: 1px solid #eaeaea;
+  max-width: -webkit-fit-content;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-radius: 5px;
+}
+
+.section_sel {
+  padding: 4px 16px;
+}
+
+.bl {
+  border-right: 1px solid #eaeaea;
+}
+
+.form {
+  margin-top: 32px;
+  /* Hide default HTML checkbox */
+  /* The slider */
+  /* Rounded sliders */
+}
+
+.form fieldset {
+  border: none;
+}
+
+.form .switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 24px;
+  margin-left: 12px;
+}
+
+.form .switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.form .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.form .slider:before {
+  position: absolute;
+  content: "";
+  height: 16px;
+  width: 16px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.form input:checked + .slider {
+  background-color: #4c35e6;
+}
+
+.form input:focus + .slider {
+  -webkit-box-shadow: 0 0 1px #2196f3;
+          box-shadow: 0 0 1px #2196f3;
+}
+
+.form input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.form .slider.round {
+  border-radius: 34px;
+}
+
+.form .slider.round:before {
+  border-radius: 50%;
+}
+
+.form .success {
+  border: 1px solid #008060;
+  padding: 4px 24px;
+  margin-bottom: 24px;
+  border-radius: 5px;
+  background-color: #dbefea;
+  color: #005a43;
+}
+
+.form input {
+  display: block;
+  width: 80%;
+  border: 1px solid #eaeaea;
+  padding: 12px 20px;
+  border-radius: 5px;
+  background-color: #fafafa;
+  margin: 4px 0 12px 0;
+  font-size: 16px;
+}
+
+.form .sublabel {
+  color: #545454;
+  font-size: 14px;
+  margin: 4px 0 16px 0;
+}
+
+.form p {
+  margin: 0;
+}
+
+.form .w_c {
+  width: 320px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.form .w_c input {
+  width: 80%;
+  padding: 0;
+}
+
+.form .flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 24px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.form .flex input {
+  display: inline;
+  margin: 0;
+}
+
+.form label {
+  font-weight: 700;
+  font-size: 14px;
+}
+
+.form .submit {
+  padding: 20px 0;
+  border-top: 1px solid #e4e4e4;
+  border-bottom: 1px solid #e4e4e4;
+  margin-top: 20px;
+}
+
+.form .btn {
+  margin: 0;
+  background-color: #4c35e6;
+  color: #fff;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.form .instead {
+  text-align: center;
+  font-size: 16px;
+  color: #545454;
+}
+
+.form .instead a {
+  color: #4c35e6;
+  font-weight: 700;
+  cursor: pointer;
+}
+
+.img_con {
+  margin: 0 auto;
+  max-width: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.img_con div {
+  margin-top: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.img_con div span {
+  display: block;
+  width: 40px;
+  height: 4px;
+  background-color: #edebfc;
+  margin-right: 8px;
+  border-radius: 12px;
+}
+
+.img_con div .active {
+  background-color: #4c35e6;
+}
 /*# sourceMappingURL=Settings.module.css.map */
