--- a/styles/settings/Settings.module.scss
+++ b/styles/settings/Settings.module.scss
@@ -7,3 +7,216 @@
   margin-left: 220px;
   // margin-bottom: 20px;
 }
+.cFlex {
+  width: calc(100vw - 240px);
+}
+
+.sCon {
+  background-color: white;
+  padding: 16px;
+  overflow-x: hidden;
+  width: calc(100vw - 240px);
+  border-radius: 5px;
+  box-shadow: 0 1px 4px rgba($color: #000000, $alpha: 0.08);
+  margin: 0 0 20px 0;
+
+  h2 {
+    font-size: 16px;
+    font-weight: 600;
+    margin: 0;
+    padding-bottom: 9px;
+  }
+}
+.section_tab {
+  background-color: #fff;
+  border: 1px solid #eaeaea;
+  max-width: fit-content;
+  display: flex;
+  //   justify-content: space-around;
+  border-radius: 5px;
+}
+
+.section_sel {
+  padding: 4px 16px;
+}
+
+.bl {
+  border-right: 1px solid #eaeaea;
+}
+
+.form {
+  margin-top: 32px;
+  fieldset {
+    border: none;
+  }
+
+  // Test
+  .switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 24px;
+    margin-left: 12px;
+  }
+
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+  }
+
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 16px;
+    width: 16px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+  }
+
+  input:checked + .slider {
+    background-color: #4c35e6;
+  }
+
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196f3;
+  }
+
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+
+  .slider.round:before {
+    border-radius: 50%;
+  }
+  // Test
+
+  .success {
+    border: 1px solid #008060;
+    padding: 4px 24px;
+    margin-bottom: 24px;
+    border-radius: 5px;
+    background-color: #dbefea;
+    color: #005a43;
+  }
+
+  input {
+    display: block;
+    width: 80%;
+    border: 1px solid #eaeaea;
+    padding: 12px 20px;
+    border-radius: 5px;
+    background-color: #fafafa;
+    margin: 4px 0 12px 0;
+    font-size: 16px;
+  }
+
+  .sublabel {
+    color: #545454;
+    font-size: 14px;
+    margin: 4px 0 16px 0;
+  }
+  p {
+    margin: 0;
+  }
+  .w_c {
+    width: 320px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    input {
+      width: 80%;
+      padding: 0;
+    }
+  }
+  .flex {
+    display: flex;
+    margin-bottom: 24px;
+    align-items: center;
+    input {
+      display: inline;
+      margin: 0;
+    }
+  }
+
+  label {
+    font-weight: 700;
+    font-size: 14px;
+  }
+
+  .submit {
+    padding: 20px 0;
+    border-top: 1px solid #e4e4e4;
+    border-bottom: 1px solid #e4e4e4;
+    margin-top: 20px;
+  }
+
+  .btn {
+    margin: 0;
+    background-color: #4c35e6;
+    color: #fff;
+    font-weight: 700;
+    cursor: pointer;
+  }
+
+  .instead {
+    text-align: center;
+    font-size: 16px;
+    color: #545454;
+
+    a {
+      color: #4c35e6;
+      font-weight: 700;
+      cursor: pointer;
+    }
+  }
+}
+
+.img_con {
+  margin: 0 auto;
+  max-width: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  div {
+    margin-top: 16px;
+    display: flex;
+    justify-content: space-between;
+    span {
+      display: block;
+      width: 40px;
+      height: 4px;
+      background-color: #edebfc;
+      margin-right: 8px;
+      border-radius: 12px;
+    }
+    .active {
+      background-color: #4c35e6;
+    }
+  }
+}
