--- a/styles/settings/Settings.module.css
+++ b/styles/settings/Settings.module.css
@@ -45,6 +45,7 @@
 
 .section_sel {
   padding: 4px 16px;
+  cursor: pointer;
 }
 
 .bl {
@@ -310,5 +311,11 @@
 .topFlex button:hover {
   background-color: #1a17a7;
   cursor: pointer;
+}
+
+.active {
+  background-color: #4c35e6;
+  color: #fff;
+  border-radius: 5px;
 }
 /*# sourceMappingURL=Settings.module.css.map */
