--- a/styles/auth/Auth.module.css
+++ b/styles/auth/Auth.module.css
@@ -62,8 +62,7 @@
   text-align: center;
   font-size: 16px;
   line-height: 1.6;
-  max-width: 325px;
-  margin: 0 auto;
+  margin: 12px auto 24px auto;
 }
 
 .con .success {
