--- a/styles/auth/Auth.module.scss
+++ b/styles/auth/Auth.module.scss
@@ -58,8 +58,8 @@
     text-align: center;
     font-size: 16px;
     line-height: 1.6;
-    max-width: 325px;
-    margin: 0 auto;
+    // max-width: 325px;
+    margin: 12px auto 24px auto;
   }
 
   .success {
