--- a/styles/global_components/TopNav.module.scss
+++ b/styles/global_components/TopNav.module.scss
@@ -27,7 +27,7 @@
   padding: 8px 24px;
   border: none;
   background-color: #dfdfdf;
-  border: 1px solid rgb(145, 145, 145);
+  // border: 1px solid rgb(145, 145, 145);
   border-radius: 5px;
   font-size: 16px;
   margin-left: 12px;
