--- a/styles/suggestions/Suggestions.module.scss
+++ b/styles/suggestions/Suggestions.module.scss
@@ -156,19 +156,47 @@
   }
 }
 
-.tag{
+.tag {
   background-color: #dbdbdb;
   padding: 4px 24px;
   display: inline-block;
   font-size: 16px;
   border-radius: 5px;
 }
-.positive{
-  background-color: #25AA04;
+.positive {
+  background-color: #25aa04;
   color: #fff;
 }
 
-.negative{
-  background-color: #D11A2A;
+.negative {
+  background-color: #d11a2a;
   color: #fff;
+}
+
+.regCon {
+  min-width: 300px;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 1px 4px rgba($color: #000000, $alpha: 0.08);
+  padding: 4px;
+  p {
+    margin-left: 20px;
+  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+
+  button {
+    margin-right: 20px;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 5px;
+    background-color: #4c35e6;
+    color: #fff;
+    cursor: pointer;
+    &:hover {
+      background-color: #2f1ca8;
+    }
+  }
 }
